<resources>
    <string name="app_name">GoscamSdkDemo</string>
    <string name="account_input_format">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789@-_.</string>
    <string name="password_input_format">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="sign_up_input_phone_number_or_email">Mobile number/Email address</string>
    <string name="input_password">Please enter your device id</string>
    <string name="input_password_again">Please enter your password again</string>
    <string name="login_login">Login</string>
    <string name="login_sign_up">Quick registration</string>
    <string name="username_format_error_tip">Username format is incorrect</string>
    <string name="password_format_error_tip">The password format is incorrect</string>
    <string name="play_load_ing">Loading &#8230;</string>
    <string name="verification_code">Verification code</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="register">Register</string>
    <string name="account_format_error_tip">Account format error</string>
    <string name="send_verify_code_success_tip">The verification code has been sent to your binding %1$s\n (%2$s), which is valid for 10 minutes</string>
    <string name="register_successfully">Register successfully</string>
    <string name="sign_up_input_password_again_error_tip">Inconsistent password input before and after</string>
    <string name="list">List</string>
    <string name="developing">developing</string>
    <string name="message_dev_empty">No device yet</string>
    <string name="connect">Connect</string>
    <string name="start_video">Start video</string>
    <string name="stop_video">Stop video</string>
    <string name="start_talk">Start talk</string>
    <string name="stop_talk">Stop talk</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <string name="capture">Capture</string>
    <string name="next">Next</string>
    <string name="enter_wifi_ssid">Enter WiFi SSID</string>
    <string name="enter_wifi_psw">Enter WiFi PSW</string>
    <string name="add_device">Add Device</string>
    <string name="qr_scan_notice">Scan the code with your phone，after the camera indicator flashing red</string>
    <string name="juli_scan">10 cm to 20 cm distance</string>
    <string name="add_connect">Connecting</string>
    <string name="add_connect_wait">It takes 1~2 minutes to connect, please be patient</string>
    <string name="connect_success">Connection successful</string>
    <string name="setting">Setting</string>
    <string name="modify_dev_name">Modify device alias</string>
    <string name="dev_share">Friend sharing</string>
    <string name="delete_dev">Delete device</string>
    <string name="move_motion">Motion detection</string>
    <string name="pir_detection">PIR detection</string>
    <string name="time_j">Camera time verification</string>
    <string name="night_switch">Night vision</string>
    <string name="tf_info">TF info</string>
    <string name="led_switch">Led switch</string>
    <string name="camera_switch">Camera switch</string>
    <string name="mic_switch">Mic switch</string>
    <string name="sure_delete">Are you sure you want to delete the device?</string>
    <string name="enter_dev_name">Please enter device name</string>
    <string name="modify">modify</string>
    <string name="enter_user_name">Please enter user name</string>
    <string name="share">share</string>
    <string name="shared_list">Device Shared List</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="auto">Auto</string>
    <string name="time_setting_reset_time_intro">The time on the camera\'s real-time screen is taken from the network. If you find that the time on the camera is not the same as the time of the mobile phone, please correct the camera time.</string>
    <string name="setting_clock_begin">Start verification</string>
    <string name="setting_ling_ming_du">Motion sensitivity</string>
    <string name="devinfo_format_sdcard">Format SD card</string>
    <string name="total_space">Total space:</string>
    <string name="used_space">Used space:</string>
    <string name="unused_space">Unused space:</string>
    <string name="tf_status">Tf status:</string>
    <string name="save">save</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="high">High</string>
    <string name="default_">default</string>
    <string name="low">Low</string>
    <string name="jian_ce_qu_yue">Detection area</string>
    <string name="no_video_data">No video data</string>
    <string name="no_sd_title">Your camera has not yet inserted a memory card</string>
    <string name="list_failed">File list failed</string>
    <string name="record_file">Record files</string>
    <string name="alarm_file">Alarm files</string>
    <string name="ft_download_parser">Mode 1: download file into MP4 file</string>
    <string name="start_download">Start download</string>
    <string name="ft_file_play">Mode 2: similar to real-time playback, play TF files</string>
    <string name="start_play">Start play</string>
    <string name="stop_play">Stop play</string>
    <string name="get_preview">Get preview</string>
    <string name="day_time">Day time</string>
    <string name="file_play">File play</string>
    <string name="cloud_play_expiration_of_cloud_storage_service_tip">The cloud storage service of the current device has expired. If you want to continue using it, please renew the service.</string>
    <string name="error_code_80001">Json string parsing error</string>
    <string name="cloud_play_not_purchase_cloud_service_tip">The current device does not have cloud storage enabled</string>
    <string name="to_mp_file">Convert to MP4 file</string>
    <string name="modify_user_psw">Modify user password</string>
    <string name="logout">Logout</string>
    <string name="exit_tip">Press again to exit the program</string>
    <string name="exit_account">Log out of current account?</string>
    <string name="enter_old_psw">Please enter the old password</string>
    <string name="enter_new_psw">Please enter a new password</string>
    <string name="enter_new_psw_again">Please enter your new password again</string>
    <string name="modify_tag_notice">Password format\: length between 8 and 16 characters, contain at least two of the numbers, uppercase letters, and lowercase letters</string>
    <string name="value_empty">Value empty</string>
    <string name="modify_success">Modify success</string>
    <string name="forget_user_password">Forget user password</string>
    <string name="dev_soft_update">Dev soft update</string>
    <string name="update">Update</string>
    <string name="update_to">Can be updated to \</string>
    <string name="next_time">Next time</string>
    <string name="update_now">Update</string>
    <string name="update_download_soft">The camera application firmware is about to be upgraded. It takes about 4&#8211;5 minutes (related to the network speed); please make sure that the camera does not power off during this process!</string>
    <string name="new_down_loading">Downloading&#8230;</string>
    <string name="config_cancel">Cancel</string>
    <string name="upgrade_failed">Upgrade failed, error: %1$s</string>
    <string name="update_success">After the download is successful, the camera will automatically restart to upgrade, please be patient</string>
    <string name="yes">determine</string>
    <string name="init">init</string>
    <string name="uninit">uninit</string>
    <string name="reconnect">reconnect</string>
    <string name="websocket">WebSocket</string>
    <string name="open_doorbell">Open the doorbell </string>
    <string name="connect_wifi">Connect router</string>
    <string name="open_dev">Turn on the wifi station</string>
    <string name="add_ipc">Add Ipc</string>
    <string name="add_doorbell">Add Doorbell</string>
    <string name="voice_notice_help">1. Please make sure that the mobile phone is as close as possible to the wifi station;2. Please increase the volume of the mobile phone and keep the surrounding environment as quiet as possible;3. Make sure that the WiFi password you enter is correct</string>
    <string name="send_voice">Send sound waves</string>
    <string name="next_step_notice">Next</string>
    <string name="bell_light">The red light is not flashing?</string>
    <string name="request_failed">Request failed</string>
    <string name="voice_pei">Sound wave configuration network</string>
    <string name="no_hear_">Did not hear "received successfully"</string>
    <string name="i_know">I see</string>
    <string name="connect_time_out">Connection timed out</string>
    <string name="connect_status_progress">Connecting</string>
    <string name="add_fail_">The device is not added successfully, the solution</string>
    <string name="red_light_msg">1. Make sure the network that the doorbell needs to connect to is normal communication; 2. The network is abnormal and the doorbell cannot connect to the server; 3. Make sure to enter the correct 2.4G band WiFi name and password</string>
    <string name="retry_after">Try again later</string>
    <string name="bind_retry">Rebind</string>
    <string name="dev_already_bind">The device has been bound</string>
    <string name="dev_bind_by_other">该设备已经被%1$s绑定，\n请联系此用户解绑设备</string>
    <string name="hao_de">好的</string>
    <string name="token_invalid">token失效,请重新扫描二维码</string>
    <string name="connect_notice">It takes 1~2 minutes to connect to the Internet, please wait patiently</string>
    <string name="red_light_">Red light is always on</string>
    <string name="please_open_doorbell">Please turn on the doorbell</string>
    <string name="open_doorbell_ing">The doorbell is pairing&#8230;</string>
    <string name="time_out">Time out</string>
    <string name="bind_success">Bind success</string>
    <string name="open_door_bell">1. Long press the wifi station for 10 seconds, and you hear a "di" sound; 2. Long press the doorbell start button to turn on the doorbell; 3. Press the doorbell button three times.</string>
    <string name="bell_notice">1. Please power on the wifi station and wait for the green light to stay on (about 35s) 2. Press and hold the "SET" button until you hear a "di" sound.</string>
    <string name="hear_notice_voice">Hear the tone, next step</string>
    <string name="bell_light_not_">The red light is not flashing</string>
    <string name="bell_light_notice">If the red indicator is not flashing after powering on for 2 minutes, please press the "SET" button for 5 second and try again</string>
    <string name="dev_add_i_know">I see</string>
    <string name="error_code_105">Service unreachable</string>
    <string name="error_code_103">Send request failed</string>
    <string name="error_code_101">Request timed out</string>
    <string name="error_code_80009">Verification code error</string>
    <string name="error_code_10030">Account already exists</string>
    <string name="error_code_10089">Update server load failed</string>
    <string name="error_code_10088">Add server load failed</string>
    <string name="error_code_10087">Update server capability set failed</string>
    <string name="error_code_10086">Add server capability set failed</string>
    <string name="check_file_md5_failed_tip">The verification code of the update file is incorrect. Please download again.</string>
    <string name="error_code_10085">Add user failed</string>
    <string name="error_code_10098">User is not bound to the device</string>
    <string name="error_code_10097">Failed to modify user password</string>
    <string name="error_code_10096">Failed to modify device properties</string>
    <string name="error_code_10094">Failed to delete a bound device</string>
    <string name="error_code_10093">Device not bound</string>
</resources>