<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/layout_toolbar"/>
    <TextView
        android:id="@+id/tv_switch"
        android:layout_below="@id/tool_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:padding="10dp"
        android:text="@string/move_motion"/>
    <Switch
        android:id="@+id/i_switch"
        android:layout_below="@id/tool_bar"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/tv_sen"
        android:layout_below="@id/tv_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:padding="10dp"
        android:text="@string/sensitivity"/>
    <RadioGroup
        android:id="@+id/rg"
        android:layout_below="@id/i_switch"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"/>
        <RadioButton
            android:id="@+id/rb_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_"/>
        <RadioButton
            android:id="@+id/rb_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"/>
    </RadioGroup>

    <TextView
        android:id="@+id/tv_area"
        android:layout_below="@id/tv_sen"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:padding="10dp"
        android:text="@string/jian_ce_qu_yue"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_below="@id/tv_area"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_below="@id/recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/main_button_selector"
        android:gravity="center"
        android:padding="0dp"
        android:singleLine="true"
        android:text="@string/save"
        android:textColor="#fff"/>
</RelativeLayout>