<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <include layout="@layout/layout_toolbar"/>
    <EditText
        android:id="@+id/et_old_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:digits="@string/account_input_format"
        android:ellipsize="end"
        android:hint="@string/enter_old_psw"
        android:maxLength="81"
        android:singleLine="false"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="start|center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_new_psw"
        android:maxLength="16"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="start|center_vertical"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/enter_new_psw_again"
        android:maxLength="16"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/modify_tag_notice"
        android:textColor="#000"/>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/main_button_selector"
        android:gravity="center"
        android:padding="0dp"
        android:singleLine="true"
        android:text="@string/save"
        android:textColor="#fff"/>
</LinearLayout>