<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <include layout="@layout/layout_toolbar"/>

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:digits="@string/account_input_format"
        android:ellipsize="end"
        android:hint="@string/sign_up_input_phone_number_or_email"
        android:maxLength="81"
        android:singleLine="false"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="start|center_vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/et_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="start|center_vertical"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/input_password_again"
        android:inputType="textPassword"
        android:maxLength="16"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <EditText
            android:id="@+id/et_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="start|center_vertical"
            android:hint="@string/verification_code"
            android:inputType="number"
            android:maxLength="16"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@android:color/black" />
        <Button
            android:id="@+id/btn_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/main_button_selector"
            android:singleLine="true"
            android:text="@string/get_verification_code"
            android:textColor="#fff"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/modify_tag_notice"
        android:textColor="#000"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@drawable/main_button_selector"
        android:gravity="center"
        android:padding="0dp"
        android:singleLine="true"
        android:text="@string/register"
        android:textColor="#fff"/>
</LinearLayout>